# CMakeList.txt : CMake project for ETM-Interview, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ETM-Interview")

# Add source to this project's executable.
add_executable (ETM-Interview "ETM-Interview.cpp" "ETM-Interview.h")

# TODO: Add tests and install targets if needed.
